wwwroot/styles_webpost.css
/* Reset CSS */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    filter:contrast(95%);
    font-family: 'Vera Sans Mono', monospace;
}

body {
    font-family: Arial, sans-serif;
    background-color: #333;
    color: #333;
}

#page-container{
    min-height: 100vh;
}

header {
    background-color: rgba(255, 255, 255, 0.8);
    padding: 20px;
    text-align: center;
    border-bottom: 2px solid #ddd;
}

header h1 {
    font-size: 2.5em;
    color: #333;
}

nav ul {
    list-style: none;
    margin: 10px 0;
}

nav ul li {
    display: inline;
    margin: 0 15px;
}

nav ul li a {
    text-decoration: none;
    color: #333;
    font-weight: bold;
    transition: color 0.3s;
}

nav ul li a:hover {
    color: #555;
}

main {
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.grid-container {
    border: #ddd 2px solid;
    border-radius: 5px;
}

.forum-category {
    z-index: 1;
    background-color: #333;
    width: 60vw;
    margin: 20px;
    padding: 15px;
    border-radius: 10px;
    border:3px solid aliceblue;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.forum-category h2 {
    font-size: 1.8em;
    color: whitesmoke;
}

.forum-category p {
    font-size: 1.1em;
    color: whitesmoke;
    word-break: break-all;
}

#serial{
    font-size: 0.6em;
}


footer {
    background-color: #999;
    padding: 10px;
    text-align: center;
    border-top: 2px solid #ddd;
    margin-top: 50px;
    position: absolute;
    bottom: 0;
    width: 100%;
    
}

footer p {
    font-size: 0.9em;
    color: #333;
}

.poster{
    width: 60vw;
    height: 20vh;
    border-radius: 20px;
    border:chartreuse 3px solid;
    align-items: center;
    margin-top: 30px;
    margin-bottom: 70px;
}

.post_area {
    position: absolute;
    text-align: center;
    width: 54vw;
    left: 3vw;
    right:3vw;
    top: 1vh;
    height: 10vh;
    background-color: #333;
    color:whitesmoke;
    border-radius: 10px;
    display:inline-block;
}

.post_button{
    position: absolute;
    top: 12.5vh;
    width: 54vw;
    height: 5vh;
    left:3vw;
    border-radius: 10px;
}

.switchPage{
    width: 50px;
    height: 30px;
}

#alert{
    position: sticky;
    top: 30px;
    left: 50px;
    width: 300px;
    height: 50px;
    visibility:hidden;
    z-index: 2;
    text-align: center;
    background-color: #90ee90;
    border-radius: 10px;
    border: 2px solid #333;
    opacity: 0.9;
}

.scale-up-center {
    -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
            animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
}

#alert p{
    position: relative;
    top:25%;
    color: black;
}

@media (max-width: 800px) {
    main {
        padding: 10px;
    }

    .forum-category {
        width: 100vw;
    }

    .forum-category h2 {
        font-size: 1.5em;
    }

    .forum-category p {
        font-size: 1em;
    }

    .poster{
        width: 100vw;
        height: 30vh;
    }

    .post_area{
        width: 90vw;
        left: 5vw;
        right: 5vw;
        top: 1vh;
        height: 20vh;
    }

    .post_button{
        top: 22vh;
        width: 90vw;
        height: 5vh;
        left:5%;
        border-radius: 10px;
    }
    
}


@-webkit-keyframes scale-up-center {
    0% {
      -webkit-transform: scale(0.5);
              transform: scale(0.5);
    }
    100% {
      -webkit-transform: scale(1);
              transform: scale(1);
    }
  }
  @keyframes scale-up-center {
    0% {
      -webkit-transform: scale(0.5);
              transform: scale(0.5);
    }
    100% {
      -webkit-transform: scale(1);
              transform: scale(1);
    }
  }

